k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipa-frontend
  namespace: skala3-finalproj-class2-team8
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: skipa-frontend
  template:
    metadata:
      labels:
        app: skipa-frontend
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: skipa-frontend
          image: amdp-registry.skala-ai.com/skala3-finalproj-class2-team8/skipa-frontend:dev-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
