k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-frontend
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
