k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skipa-frontend-ingress
  namespace: skala3-finalproj-class2-team8
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public-nginx
  tls:
    - hosts:
        - team8-skipa.skala25a.project.skala-ai.com
      secretName: skipa-frontend-tls
  rules:
    - host: team8-skipa.skala25a.project.skala-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skipa-frontend
                port:
                  number: 80
